# Humanoid-Navigation-using-MPC-LDCBF

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  todo.txt
HumanoidNavigation/: config.yml
HumanoidNavigation/MPC/: BaseHumanoidMpc.py  DifferentialMpc.py  HumanoidAnimationUtils.py  HumanoidMPC2.py  HumanoidMPC_different_smpl_times.py  HumanoidMpc.py  ObstaclesUtils.py  UnicycleHelper.py  constraints_draft.txt  mpc_cbf.py
HumanoidNavigation/RangeFinder/: range_finder_with_polygons.py  range_finder_wth_polygons_dbscan.py
HumanoidNavigation/Utils/: HumanoidAnimationUtils.py  ObstaclesUtils.py  PlotsUtils.py  control_barrier_functions.py  footstep_planner.py  humanoid_2d_animation.py  obstacles.py  obstacles_no_sympy.py
HumanoidNavigation/report_simulations/: Scenario.py  bounds_tuning.py  simulation_1.py  simulation_maze.py  simulation_rrt.py
Report/: main.tex  ref.bib  report.tex  title.tex
Report/chapters/: Conclusions.tex  Improvements.tex  Introduction.tex  LIP.tex  MPC.tex  Simulations.tex
Report/sections/: introduction.tex  lip.tex  mpc.tex
Source/: BaseAnimationHelper.py  animation_trials.py  control_barrier_functions.py  diff_drive.py  humanoid_2d_animation.py  initial_script.py  mpc.py  mpcBase.py  mpc_cbf.py  obstacles.py  requirements.txt
Source/MPC/: BaseMpc.py  DifferentialMpc.py  HumanoidMpc.py  mpc_cbf.py
Source/RangeFinder/: range_finder_with_polygons.py
Source/Utils/: BaseAnimationHelper.py  control_barrier_functions.py  footstep_planner.py  humanoid_2d_animation.py  (+1 more)
source/: initial_script.py  obstacles.py
(+6 files in other folders)
