[project]
name = "HumanoidNavigation"
version = "0.1.0"
description = "Humanoid Navigation using Mpc with Control Barrier Functions"
readme = "README.md"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]